add-js-accordion

--- a/index.html
+++ b/index.html
@@ -81,46 +81,62 @@
             margin-bottom: 15px;
         }
 
-        .collapse:target .content {
+        .collapse.open .content {
             max-height: 15em;
         }
 
-        .collapse:target a:before {
+        .collapse.open a:before {
             transform: rotate(-90deg);
         }
-
     </style>
 </head>
 
 <body>
-<div class="collapse-content">
-    <div class="collapse open" id="instagram">
-        <a class="instagram" href="#instagram"><i class="fab fa-instagram"></i> Instagram</a>
-        <div class="content">
-            <div class="inner-content">
-                <h3>Instagram</h3>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
-                nobis iusto deleniti corporis alias quo a quam similique cupiditate
-                pariatur aliquid, omnis, officia dicta officiis impedit nisi dolores
-                ut, distinctio placeat. Magni dolores perferendis ab laborum in
-                neque, non exercitationem!
+    <div class="collapse-content">
+        <div class="collapse" id="instagram">
+            <a class="instagram" href="#instagram"><i class="fab fa-instagram"></i> Instagram</a>
+            <div class="content">
+                <div class="inner-content">
+                    <h3>Instagram</h3>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+                    nobis iusto deleniti corporis alias quo a quam similique cupiditate
+                    pariatur aliquid, omnis, officia dicta officiis impedit nisi dolores
+                    ut, distinctio placeat. Magni dolores perferendis ab laborum in
+                    neque, non exercitationem!
+                </div>
+            </div>
+        </div>
+        <div class="collapse" id="twitter">
+            <a class="twitter" href="#twitter"><i class="fab fa-twitter"></i> Twitter</a>
+            <div class="content">
+                <div class="inner-content">
+                    <h3>Twitter</h3>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+                    nobis iusto deleniti corporis alias quo a quam similique cupiditate
+                    pariatur aliquid, omnis, officia dicta officiis impedit nisi dolores
+                    ut, distinctio placeat. Magni dolores perferendis ab laborum in
+                    neque, non exercitationem!
+                </div>
             </div>
         </div>
     </div>
-    <div class="collapse" id="twitter">
-        <a class="twitter" href="#twitter"><i class="fab fa-twitter"></i> Twitter</a>
-        <div class="content">
-            <div class="inner-content">
-                <h3>Twitter</h3>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
-                nobis iusto deleniti corporis alias quo a quam similique cupiditate
-                pariatur aliquid, omnis, officia dicta officiis impedit nisi dolores
-                ut, distinctio placeat. Magni dolores perferendis ab laborum in
-                neque, non exercitationem!
-            </div>
-        </div>
-    </div>
-</div>
+
+    <script>
+        const items = document.querySelectorAll('.collapse');
+
+        let activeItem;
+        for (let i = 0; i < items.length; i++) {
+            items[i].addEventListener('click', (event) => {
+                if (activeItem) {
+                    activeItem.classList.remove('open');
+                }
+
+                const currentTarget = event.currentTarget;
+                activeItem = currentTarget;
+                currentTarget.classList.add('open');
+            })
+        }
+    </script>
 </body>
 
 </html>
